--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="progress" id="progress">Rubbel den Schnee frei… (0%)</div>
         <div class="cta"><button class="open-btn" id="openBtn" disabled>Geschenk öffnen</button></div>
         <div class="prize" id="prize">
-          <h3>🎁 Dein Gewinn</h3> <a id="prizeLink" href="play.html" target="_blank" rel="noopener">Zum Preis</a>
+          <h3>🎁 Dein Gewinn</h3> <a id="prizeLink" href="play.html" target="_blank">Zum Preis</a>
         </div>
       </div>
     </div>
